src/core-crm/objects/Expression_of_Interest__c/Expression_of_Interest__c.object-meta.xml
<CustomObject>
    <description>Record will be created when learner clicks &apos;Register Interest&apos; button against a Product in OPE catalogue or nominations from corporate portal</description>
    <label>Expression of Interest</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Expression of Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression of Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>