src/core-crm/objects/Expression_of_Interest__c/fields/Dietary_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirement__c</fullName>
    <label>Dietary Requirement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>