src/core-crm/objects/Expression_of_Interest__c/fields/Mobile_Locale__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Locale__c</fullName>
    <label>Mobile Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loqate_Locale</valueSetName>
    </valueSet>
</CustomField>