src/core-crm/objects/Expression_of_Interest__c/fields/Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_ID__c</fullName>
    <label>Pricebook Entry ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>