src/core-crm/objects/Expression_of_Interest__c/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will link to program offering that the learner successfully registered to for &apos;Register Interest&apos; process OR a link to the nominated program offering.</description>
    <label>Program Offering</label>
    <referenceTo>Program_Offering__c</referenceTo>
    <relationshipLabel>Expression of Interests</relationshipLabel>
    <relationshipName>Expression_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>