src/core-crm/objects/Expression_of_Interest__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of interest process</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nomination</fullName>
            </value>
            <value>
                <fullName>Register Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>